--- a/examples/contextFeatureAnalysis.ipynb
+++ b/examples/contextFeatureAnalysis.ipynb
@@ -23,7 +23,7 @@
     "- `ood_2d`: 2D features of OOD samples\n",
     "- `ctx_2d`: 2D features of context samples\n",
     "- `in_labels`: labels of in-distribution samples (0 or 1)\n",
-    "- `closest_ood_indices`: indices of the top-k (topp-2) closest OOD samples to the in\n",
+    "- `closest_ood_indices`: indices of the top-k (top-2) closest OOD samples to the in\n",
     "\n",
     "⭐ See the `../contextFeatureGeneration.py` script for the BNN model's (constrained by different context sets) feature extraction source code. Detailed instructions for running this script can be found in the `../REAME.MD` file."
    ],
